ajuste textos y template estructura menu principal

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -282,6 +282,16 @@
           }
         }
       }
+    },
+    "LIBRARY": {
+      "TEXT": "Biblioteca"
+    },
+    "PYS": {
+      "TEXT": "PyS",
+      "LIST": {
+        "QUOTE": "Cotizar",
+        "REQUEST": "Solicitud"
+      }
     }
   }
 }
