--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -17,6 +17,7 @@
         "ECOMMERCE": "Comercio electrónico",
         "CRYPTO": "Cripto",
         "PROJECTS": "Proyectos",
+        "USERS": "Usuarios",
         "NFT": "NFT",
         "JOB":"TRABAJO"
       }
