agregar menu usuarios por empresas y correccion descripcion conectar articulo

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -285,7 +285,11 @@
       }
     },
     "CONFIG": {
-      "TEXT": "Configurar Empresa"
+      "TEXT": "Configuración",
+      "LIST": {
+        "COMPANIES": "Configurar Empresa",
+        "USERS": "Configurar Usuarios"
+      }
     },
     "LIBRARY": {
       "TEXT": "Biblioteca"
