ajustes estilos generales y usuarios

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -309,6 +309,9 @@
         "QUOTE": "Cotizar",
         "REQUEST": "Solicitud"
       }
+    },
+    "PROFILE": {
+      "TEXT": "Perfil"
     }
   }
 }
