--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,7 +16,8 @@
         "CRM": "CRM",
         "ECOMMERCE": "Ecommerce",
         "CRYPTO": "Crypto",
-        "PROJECTS": "Projects",
+        "PROJECTS": "Legal Requirements",
+        "USERS": "Users",
         "NFT": "NFT",
         "JOB":"Job"
       }
@@ -185,6 +186,7 @@
     },
     "ADVANCEUI": {
       "TEXT": "Advance UI",
+      "BADGE": "New",
       "LIST": {
         "SWEETALERTS": "Sweet Alerts",
         "NESTABLELIST": "Nestable List",
@@ -281,6 +283,38 @@
           }
         }
       }
+    },
+    "CONFIG": {
+      "TEXT": "Setting",
+      "LIST": {
+        "COMPANIES": "Set Up Company",
+        "USERS": "Set Up Users"
+      }
+    },
+    "LIBRARY": {
+      "TEXT": "Library"
+    },
+    "COMMITMENTS": {
+      "TEXT": "Commitments"
+    },
+    "MONITORING": {
+      "TEXT": "Monitoring"
+    },
+    "AUDITS": {
+      "TEXT": "Audits"
+    },
+    "PYS": {
+      "TEXT": "PyS",
+      "LIST": {
+        "QUOTE": "Quote",
+        "REQUEST": "Request"
+      }
+    },
+    "PROFILE": {
+      "TEXT": "Profile"
+    },
+    "PLANS": {
+      "TEXT": "Plans Work"
     }
   }
 }
