--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -294,6 +294,9 @@
     "LIBRARY": {
       "TEXT": "Library"
     },
+    "RULES": {
+      "TEXT": "Rules"
+    },
     "COMMITMENTS": {
       "TEXT": "Commitments"
     },
