--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -294,6 +294,9 @@
     "LIBRARY": {
       "TEXT": "Biblioteca"
     },
+    "RULES": {
+      "TEXT": "Normas"
+    },
     "COMMITMENTS": {
       "TEXT": "Compromisos"
     },
